--- a/package.json
+++ b/package.json
@@ -9,11 +9,9 @@
   "scripts": {
     "lint": "find app -name '*.ts' | xargs tslint -c tslint.json --force",
     "lite": "lite-server",
-    "postinstall": "typings install",
     "start": "tsc && concurrently \"npm run tsc:w\" \"npm run lite\" ",
     "tsc": "tsc",
-    "tsc:w": "tsc -w",
-    "typings": "typings"
+    "tsc:w": "tsc -w"
   },
   "license": "ISC",
   "dependencies": {
@@ -35,11 +33,12 @@
     "zone.js": "^0.6.25"
   },
   "devDependencies": {
+    "@types/core-js": "^0.9.34",
+    "@types/node": "^6.0.46",
     "codelyzer": "^1.0.0-beta.2",
     "concurrently": "^3.0.0",
     "lite-server": "^2.2.2",
     "tslint": "^3.15.1",
-    "typescript": "^2.0.3",
-    "typings": "^1.4.0"
+    "typescript": "^2.0.3"
   }
 }
