--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "find app -name '*.ts' | xargs tslint -c tslint.json --force",
     "lite": "lite-server",
     "start": "tsc && concurrently \"npm run tsc:w\" \"npm run lite\" ",
+    "test": "tsc && concurrently \"npm run tsc:w\" \"karma start karma.conf.js\" ",
+    "test:once": "tsc && karma start karma.conf.js --single-run",
     "tsc": "tsc",
     "tsc:w": "tsc -w"
   },
@@ -34,9 +36,17 @@
   },
   "devDependencies": {
     "@types/core-js": "^0.9.34",
+    "@types/jasmine": "^2.5.37",
     "@types/node": "^6.0.46",
     "codelyzer": "^1.0.0-beta.2",
     "concurrently": "^3.0.0",
+    "jasmine-core": "^2.5.2",
+    "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-cli": "^1.0.1",
+    "karma-htmlfile-reporter": "^0.3.4",
+    "karma-jasmine": "^1.0.2",
+    "karma-jasmine-html-reporter": "^0.2.2",
     "lite-server": "^2.2.2",
     "tslint": "^3.15.1",
     "typescript": "^2.0.3"
